Fix minor bugs on firefox and safari

--- a/themes/dataone/layouts/partials/blocks/button/button.scss
+++ b/themes/dataone/layouts/partials/blocks/button/button.scss
@@ -92,6 +92,7 @@
   
   @include desktop{
     padding: 21px 22px 44px;
+    min-width: 68px;
     position: absolute;
     top: -5px;
     right: -20px;
