--- a/themes/dataone/layouts/partials/blocks/d1search/d1search.scss
+++ b/themes/dataone/layouts/partials/blocks/d1search/d1search.scss
@@ -131,6 +131,7 @@
     
     .button{
       padding: 10px 12px 35px;
+      min-width: 48px;
     }
   }
   
