--- a/themes/dataone/layouts/partials/blocks/global-footer/global-footer.scss
+++ b/themes/dataone/layouts/partials/blocks/global-footer/global-footer.scss
@@ -19,13 +19,13 @@
                           "fineprint";
                           
     @include desktop{
-      grid-template-columns: 3fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
       grid-template-rows: 0.1fr 0.1fr 0.4fr 0.4fr;
       grid-gap: 15px 15px;
-      grid-template-areas:  "sitemap logo"
-                            "sitemap ."
-                            "contact contact"
-                            "fineprint fineprint";
+      grid-template-areas:  "sitemap . logo"
+                            "sitemap . ."
+                            "sitemap contact ."
+                            "fineprint fineprint fineprint";
     }
   }
                         
@@ -43,6 +43,7 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    line-height: 1.3;
     
     @include desktop{
       text-align: left;
@@ -53,10 +54,12 @@
   }
   
   &__site-map-link{
-    color: col($c-neutral,3);;
+    color: col($c-neutral,3);
     text-decoration: none;
-    color: col($c-neutral,3);;
     font-size: 1.2rem;
+    &:hover{
+      color: col($c-neutral,1);
+    }
   }
   
   &__contact{
